--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,20 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
+		'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 .rdw-editor-main {
-  height: 400px !important;
-  border: 1x solid #242549 !important;
-  background-color: white;
-  padding: 0 16px;
-  font-family: Graphik;
+	height: 400px !important;
+	border: 1x solid #242549 !important;
+	background-color: white;
+	padding: 0 16px;
+	font-family: Graphik;
 }
 .rdw-editor-wrapper {
-  margin-top: 16px;
+	margin-top: 16px;
+}
+::selection {
+	background-color: #242549;
 }
