--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,8 @@ body {
 }
 .medium-editor-element {
 	border: 1x solid #242549 !important;
-	min-height: 400px !important;
+	height: 400px !important;
+	overflow: scroll;
 	background-color: white;
 	margin: 16px 0;
 	padding: 10px;
